--- a/appproject/codemon/static/codemon/css/chat_teacher.css
+++ b/appproject/codemon/static/codemon/css/chat_teacher.css
@@ -44,15 +44,19 @@
 
 /* 既読表示 */
 .message.sent .message-read {
-  font-size: 11px;
-  color: rgba(255, 255, 255, 0.8);
-  margin-top: 2px;
+  font-size: 12px;
+  color: #4CAF50;
+  margin-top: 4px;
+  font-weight: 500;
+  display: inline-block;
+  min-width: 45px;
 }
 
 .message.received .message-read-by {
-  font-size: 11px;
+  font-size: 12px;
   color: #999999;
-  margin-top: 2px;
+  margin-top: 4px;
+  font-weight: 500;
 }
 
 /* アニメーション */
